# goit_python_web_homework_14

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 1ad4be74e781_init.py
